crates/before/tests/ui/clone_clock.stderr
error[E0599]: no method named `clone` found for struct `before::Clock` in the current scope
 --> tests/ui/clone_clock.rs:8:18
  |
8 |     let _dup = c.clone();
  |                  ^^^^^ method not found in `before::Clock`
